<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_texture"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_button"
            android:gravity="end"
            android:hint="@string/hint_0"
            android:padding="@dimen/default_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_view" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/button_Login"-->
<!--                style="@style/my_style_calc_button_sign"-->
<!--                android:text="Login" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AC"
                style="@style/my_style_calc_button_sign"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_C"
                style="@style/my_style_calc_button_sign"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/my_style_calc_button_sign"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/my_style_calc_button_sign"
                android:text="@string/division" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_one"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_two"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_three"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiplication"
                style="@style/my_style_calc_button_sign"
                android:text="@string/multiplication" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_four"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtraction"
                style="@style/my_style_calc_button_sign"
                android:text="@string/subtraction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seven"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eight"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_nine"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_addition"
                style="@style/my_style_calc_button_sign"
                android:text="@string/addition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_choice_of_theme"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/theme"
                android:textSize="@dimen/textSizeTheme" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zero"
                style="@style/my_style_calc_button_numeral"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/my_style_calc_button_sign"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/my_style_calc_button_sign"
                android:text="@string/equal"
                app:backgroundTint="@color/background_tint_equals" />

        </LinearLayout>

    </LinearLayout>

</TableLayout>