<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_texture"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".SettingsActivity">

    <TextView
        android:id="txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rectangle_button"
        android:gravity="end"
        android:padding="@dimen/default_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/authorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Autorize" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/not_authorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reject" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturn"
            style="@style/my_style_calc_button_numeral"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/_return" />
    </LinearLayout>

</LinearLayout>